--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,18 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color:darkslategrey;
+  border-bottom: 2px solid;
+  padding: 20px 50px;
+}
+
+header a {
+  padding-left: 20px;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
